--- a/Ex1/CMakeLists.txt
+++ b/Ex1/CMakeLists.txt
@@ -1,14 +1,23 @@
-cmake_minimum_required(VERSION 3.22.3)
+cmake_minimum_required(VERSION 3.13)
 
 project(ex1)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-Wall")
+include(FetchContent)
+FetchContent_Declare(googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG release-1.11.0)
+FetchContent_GetProperties(googletest)
 
-include_directories(src)
+if (NOT googletest_POPULATED)
+  FetchContent_Populate(googletest)
+  add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BUILD_DIR})
+endif()
 
-add_subdirectory(src)
-add_subdirectory(tst)
-add_subdirectory(lib)
+add_library(sol STATIC src/Ex1.cpp)
+
+add_executable(sol_run src/main.cpp)
+target_link_libraries(sol_run sol)
+
+add_executable(sol_tst tst/Ex1_test.cpp)
+target_link_libraries(sol_tst sol gtest_main gmock_main)
 
